# claude-code

./: README.md  install.ps1  install.sh
.github/workflows/: ci.yml  patch-release.yml  release.yml
docs/: index.html  index.md  installation.md  local-models.md  providers.md  tools.md
npm/: package.json
src-rust/: Cargo.toml
src-rust/crates/acp/registry-template/: agent.json
src-rust/crates/acp/src/: prompt.rs
src-rust/crates/api/: Cargo.toml
src-rust/crates/api/src/: bun_tls.rs  lib.rs  model_registry.rs  provider_types.rs  stream_parser.rs  transform.rs  variants.rs
src-rust/crates/api/src/protocol/: mod.rs  openai_chat.rs
src-rust/crates/api/src/providers/: anthropic.rs  azure.rs  bedrock.rs  cohere.rs  copilot.rs  google.rs  minimax.rs  openai.rs  openai_compat.rs
src-rust/crates/bridge/src/: lib.rs
src-rust/crates/cli/src/: main.rs  oauth_flow.rs  upgrade.rs
src-rust/crates/commands/: Cargo.toml
src-rust/crates/commands/src/: appearance.rs  copy.rs  diagnostics.rs  display.rs  doctor.rs  export.rs  extras.rs  history.rs  lib.rs  maintenance.rs  managed_agents.rs  memory.rs  new_move.rs  permissions.rs  plugin.rs  providers.rs  remote.rs  review.rs  search.rs  setup.rs  share.rs  speech.rs  teleport.rs  thinkback.rs  ui_settings.rs  usage.rs
src-rust/crates/core/src/: accounts.rs  auth_store.rs  context_collapse.rs  effort.rs  feature_flags.rs  import_config.rs  keybindings.rs  keywords.rs  lib.rs  mcp_trust.rs  memdir.rs  oauth_config.rs  output_styles.rs  paths.rs  (+7 more)
src-rust/crates/mcp/: Cargo.toml
src-rust/crates/tools/: Cargo.toml
(+55 files in other folders)
