[package]
name = "claurst-api"
version.workspace = true
edition.workspace = true

[dependencies]
claurst-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
# wreq = client BoringSSL avec impersonation TLS (profil Bun) pour le chemin Anthropic.
wreq = { workspace = true }
wreq-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
hmac = "0.12"
